# simple-file-server

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
deploy/: cdn.service  deploy.sh
src/: authorized.rs  cache_map.rs  file_store.rs  main.rs  state.rs
src/config/: file.rs  server.rs
src/routes/: api.rs  mod.rs  serve_files.rs  upload_file.rs
