[package]
name = "cdn"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
async-stream = "0.3.6"
futures = "0.3.31"
hmac = "0.12.1"
jwt = "0.16.0"
mime_guess = "2.0.5"
path-clean = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_default = "0.2.0"
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = "1.47.1"
